maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:12: error: not found: value sommeAngle
      sommeAngle -= 1
      ^Escaper:16: error: not found: value sommeAngle
  	sommeAngle += 1
        ^